# tulsu

./: 1task.py  README.md
lab1/: 1task.py  2task.py  3task.py
lab1 FIXED/: 1task.py  2task.py  3task.py  logs.txt
lab2/: error.txt  greeter.py  names.txt
regex-lab/: README.md  log_file.txt  solution1.py  solution2.py  solution3.py  solution4.py
tiny-database/: README.md  main.py  pyproject.toml
tiny-database/database/: database.py
tiny-database/tests/: test_database.py
